<resources>
    <string name="app_name">MadBatterApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">Lorem ipsum</string>
    <string name="Welcome">Welcome</string>
    <string name="mousse_cake">Chocolate Mousse Cake</string>
    <string name="carm_cake">Caramel Cake</string>
    <string name="sunflower_cake">Sunflower Cake</string>
    <string name="blackberry_cake">Blackberry Cake</string>
    <string name="lemonslice_cake">Lemon Cake</string>
    <string name="menu_home">Home</string>
    <string name="menu_recipe">Recipe of the Week</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_products">Bakery Menu</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_cart">My Cart</string>
    <string name="Categories">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredienttitle">Ingredients</string>
    <string name="ingredients"><![CDATA[3 cups butter, softened \n 1–&#189; cups cornstarch \n 1–&#189; cups confectioners\' sugar, sifted \n 4–&#189; cups all purpose flour \n halved candied cherries]]></string>
    <string name="directiontitle">Step One</string>
    <string name="directiontitle2">Step Two</string>
    <string name="directiontitle3">Step Three</string>
    <string name="stepone">In a large bowl, cream butter and confectioners\' sugar until light and fluffy, about 5 minutes. \n Gradually add flour and cornstarch, beating until well blended</string>
    <string name="steptwo">With hands lightly dusted with additional cornstarch, roll dough into 1 inch balls. \n Place 1 inch apart on ungreased baking sheets. \n Lightly press with floured fork. \n Top with cherry halves. </string>
    <string name="stepthree">Bake at 300 degrees until bottoms are lightly browned, 20-22 minutes. \n Cool for 5 minutes before removing from pans to wire racks</string>
    <string name="about">Hi! My name is Allison and you may recognize me if you\'ve been to our store. I\'m the proud owner of
    the Mad Batter Bakery, which has been open for 5 years! I was 26 when I started this bakery and have always loved baking
    since I was a child. It\'s been a pleasure to share my passion and excitement with the community. So thank you, for
    letting me sharing my love with y\'all!</string>
    <string name="crew">Rest of the Party</string>
    <string name="member1">Hattie \n Head Baker and Co-owner</string>
    <string name="member2">Cat \n Pastry Chef</string>
    <string name="faqtitle">Frequently Asked Questions</string>
    <string name="aboutus">About Us</string>
    <string name="orderQuestion">How long will it take for you to complete my order?</string>
    <string name="orderAnswer">It takes between 24 to 72 hours for an order to be completed. Once completed, you\'ll be notified via email</string>
    <string name="hoursQuestion">What are your hours?</string>
    <string name="hoursAnswer">We\'re open Monday-Saturday from 10AM until 5PM</string>
    <string name="requestQuestion">If I order a cake, can I get writing on it?</string>
    <string name="requestAnswer">You sure can! Just let me know in the email upon checkout</string>
    <string name="placeOrderQuestion">Can I place an order over the phone?</string>
    <string name="placeOrderAnswer"> Due to accountability, we do not take orders over the phone. Please order via the app
    or our website!</string>
    <string name="Cart">Shopping Cart</string>
    <string name="Remove">Remove from Cart</string>
    <string name="Checkout">Proceed to Checkout</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="viewMap">Open Map</string>
    <string name="insta">Instagram</string>
    <string name="ourwebsite">Our Website</string>
    <string name="questions">Have any questions?</string>
    <string name="reachout">Contact us via phone or email</string>
    <string name="whereat">Our location</string>
    <string name="location">We\'re located at 220 Ashland Ave. London ON N5W 4E4</string>
    <string name="socialmedia">Check us out</string>
    <string name="followus">Follow us on our Instagram page!</string>
    <string name="website">Browse our website</string>
    <string name="chocolate_mousse">Chocolate Mousse Cake</string>
    <string name="mousse_description">A moist, dark chocolate cake covered in buttercream frosting.</string>
    <string name="caramel_cake">Caramel Cake</string>
    <string name="caramel_description">This cake is filled with layers of caramel frosting and drizzled in caramel.</string>
    <string name="sun_cake">Sunflower Cake</string>
    <string name="sun_description">A cake is covered in buttercream and decorated with sunflowers.</string>
    <string name="berry_cake">Blackberry Cake</string>
    <string name="berry_description">A vanilla-based cake decorated with blackberries and lavender.</string>
    <string name="lemon_cake">Lemon Cake</string>
    <string name="lemon_description">This citrus-y cake is filled with vanilla buttercream frosting.</string>
    <string name="birth_cake">Birthday Cake</string>
    <string name="birth_description">An all vanilla-based cake decorated with sprinkles and icing.</string>
    <string name="vanilla_cake">Vanilla Cake</string>
    <string name="vanilla_description">A vanilla cake drizzled in chocolate and layered with buttercream.</string>
    <string name="fun_cake">Funfetti Cake</string>
    <string name="fun_description">A fluffy white cake with sprinkles used inside the cake AND outside!</string>
    <string name="rose_cake">Rose Cake</string>
    <string name="rose_description">A colourful vanilla buttercream frosted cake decorated to be look like roses.</string>
    <string name="caramel_brownie">Caramel Brownie</string>
    <string name="caramelbrownie_description">"A chocolate brownie covered in a caramel sauce</string>
    <string name="candy_brownie">Candy Cane Brownie</string>
    <string name="candy_description">A chocolate brownie decorated with candy cane chunks on top </string>
    <string name="choco_brownie">Chocolate Brownie</string>
    <string name="choco_description">A super fudgey chocolate brownie. </string>
    <string name="almond_brownie">Almond Brownie</string>
    <string name="almond_description">A coffee-chocolate brownie topped with sliced, toasted almonds</string>
    <string name="double_chocolate">Double Chocolate Brownie</string>
    <string name="doublechocolate_description">A fudge chocolate brownie drizzled in chocolate</string>
    <string name="strawberry_brownie">Strawberry Brownie</string>
    <string name="strawberry_description">A chocolate brownie topped with dried strawberries</string>
    <string name="walnut_brownie">Walnut Brownie</string>
    <string name="walnut_description">A chocolate brownie topped with chopped walnuts and confectioners sugar</string>
    <string name="xmas_cookie">Christmas Cookies</string>
    <string name="xmas_description">An assortment of sugar cookies decorated for Christmas</string>
    <string name="pistachio_cookie">Pistachio Cookie</string>
    <string name="pistachio_description">A butter cookie with pistachios</string>
    <string name="pecan_cookie">Pecan Cookie</string>
    <string name="pecan_description">A chocolate chip cookie with pecans mixed in</string>
    <string name="mm_cookie">M&amp;M Cookie</string>
    <string name="mm_description">A chocolate cookie topped with mini M&amp;M\'s</string>
    <string name="macaroon_cookie">Macaroon</string>
    <string name="macaroon_description">A flaky vanilla cookie with a vanilla icing inside</string>
    <string name="chocooat_cookie">Chocolate Oatmeal Cookie</string>
    <string name="chocooat_description">A chocolate chip cookie mixed in with rolled oats</string>
    <string name="chocolate_chip">Chocolate Chip Cookie</string>
    <string name="chocolate_description">A chocolate chip cookie</string>
    <string name="cookieCredit">Credits for Cookie images</string>
    <string name="applink1">Photo by <a href="https://unsplash.com/@ksousaphotography?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Katherine Sousa</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></string>
    <string name="applink2">Photo by <a href="https://unsplash.com/@charlesdeluvio?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Charles Deluvio</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
  </string>
    <string name="applink3">Photo by <a href="https://unsplash.com/@debbiewidjaja?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Debbie Widjaja</a> on <a href="https://unsplash.com/@debbiewidjaja?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
  </string>
    <string name="applink4">Photo by Meraki Photos from Pexels</string>
    <string name="applink5">Photo by Jill Wellington from Pexels</string>
    <string name="applink6">Photo by M. Catalin Cardei from Pexels</string>
    <string name="applink7">Photo by Laura James from Pexels</string>
    <string name="applink8">Photo by <a href="https://unsplash.com/@americanheritagechocolate?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">American Heritage Chocolate</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
  </string>
    <string name="applink9">Photo by <a href="https://unsplash.com/@sahandbabali">Sahand Babali</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></string>
    <string name="brownieCredit">Credits for Brownie images</string>
    <string name="applink10">Photo by <a href="https://unsplash.com/@arantxa_aniorte">Arantxa Aniorte</a> on<a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></string>
    <string name="applink11">Photo by <a href="https://unsplash.com/@kellyvisel">Kelly Visel</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></string>
    <string name="applink12">Photo by <a href="https://unsplash.com/@pushpak88">Pushpak Dsilva</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a> </string>
    <string name="applink13">Photo by <a href="https://unsplash.com/@tata186">Tatiana Rodriguez</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a> </string>
    <string name="cakeCredit">Credits for Cake images</string>
    <string name="animations_title">Animations</string>
    <string name="alarm_title">Alarm</string>
    <string name="sync_header">Layout</string>
    <string name="animations_summary">Toggle Animation</string>
    <string name="timer_summary">Set Timer</string>
    <string name="gridlayout">Toggle grid layout</string>
</resources>