<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group>

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/bakery"
        android:title="@string/menu_products"/>
    <item
        android:id="@+id/nav_recipe"
        android:icon="@drawable/whisk"
        android:title="@string/menu_recipe"/>
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/shoppingcart"
        android:title="@string/menu_cart"/>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/dough"
        android:title="@string/menu_aboutus"/>
    <item
        android:id="@+id/nav_faq"
        android:icon="@drawable/question"
        android:title="@string/menu_faq"/>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/contactmail"
        android:title="@string/menu_contact"/>

    <item
        android:id="@+id/nav_credits"
        android:title="@string/menu_credits"/>
</group>
</menu>