<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/animations_title">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/animations_menu"
            app:entryValues="@array/animations_value"
            app:key="animationsMenu"
            app:summary="@string/animations_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/alarm_title">
        <ListPreference
            app:defaultValue="0"
            app:entries="@array/alarm_menu"
            app:entryValues="@array/alarm_value"
            app:key="alarmMenu"
            app:summary="@string/timer_summary" />



    </PreferenceCategory>

<PreferenceCategory app:title="@string/sync_header">

<SwitchPreferenceCompat
    app:title="@string/gridlayout"
    android:key="gridLayout"/>



    </PreferenceCategory>
</PreferenceScreen>