<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reachout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/phoneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_phone_24"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Phone" />

            <Button
                android:id="@+id/emailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Email" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whereat"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/location" />

        <Button
            android:id="@+id/mapBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/viewMap" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socialmedia"
            android:textSize="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/facebookBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:adjustViewBounds="false"
                android:background="@drawable/facebook"
                app:civ_border_color="@color/forestgreen"
                app:civ_border_width="2dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/instagramBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:adjustViewBounds="false"
                android:background="@drawable/instagram"
                app:civ_border_color="@color/forestgreen"
                app:civ_border_width="2dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/twitterBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="false"
                android:background="@drawable/twitter"
                app:civ_border_color="@color/forestgreen"
                app:civ_border_width="2dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/websiteBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="false"
                android:background="@drawable/ic_baseline_language_24"
                app:civ_border_color="@color/forestgreen"
                app:civ_border_width="2dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>