<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.CartFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Cart"
        android:textSize="34sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productCatalogRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:choiceMode="multipleChoice"/>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remove"/>

        <Button
            android:id="@+id/checkoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkout"/>
    </LinearLayout>

</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>